--- a/index.html
+++ b/index.html
@@ -1,199 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Grade 11 STEM Online Learning</title>
-<style>
-body { font-family: Arial, sans-serif; margin:0; padding:0; background:#f5f5f5; color:#333; }
-nav { display:flex; flex-wrap:wrap; background:#007acc; }
-nav button { flex:1; padding:15px; color:white; background:none; border:none; cursor:pointer; font-size:16px; }
-nav button.active { background:#005fa3; }
-section { display:none; padding:20px; max-width:900px; margin:auto; }
-section.active { display:block; }
-h3 { color:#007acc; }
-.test, .summary, .lesson { margin-bottom:40px; background:white; padding:15px; border-radius:8px; box-shadow:0 0 5px rgba(0,0,0,0.1); }
-button { margin-top:10px; padding:7px 15px; cursor:pointer; }
-.score { margin-top:5px; font-weight:bold; }
-@media(max-width:600px){nav button{font-size:14px; padding:12px;} section{padding:10px;}}
-</style>
-</head>
-<body>
-<h1 style="text-align:center; padding:15px;">Grade 11 STEM Online Learning</h1>
-
-<nav>
-<button class="tab-btn active" data-tab="lessons">Lessons</button>
-<button class="tab-btn" data-tab="activities">Activities</button>
-<button class="tab-btn" data-tab="quizzes">Quizzes</button>
-<button class="tab-btn" data-tab="tests">Tests</button>
-<button class="tab-btn" data-tab="summaries">Summaries</button>
-<button class="tab-btn" data-tab="mypage">My Page</button>
-</nav>
-
-<section id="lessons" class="active"><div id="lesson-content"></div></section>
-<section id="activities"><div id="activity-content"></div></section>
-<section id="quizzes"><div id="quiz-content"></div></section>
-<section id="tests"><div id="test-content"></div></section>
-<section id="summaries"><div id="summary-content"></div></section>
-<section id="mypage"><h3>My Progress</h3><div id="progress-content"></div></section>
-
-<script>
-// ===== Tab Navigation =====
-const sections = document.querySelectorAll('section');
-const tabs = document.querySelectorAll('nav .tab-btn');
-tabs.forEach(tab=>{
-tab.addEventListener('click',()=>{
-tabs.forEach(t=>t.classList.remove('active'));
-tab.classList.add('active');
-sections.forEach(s=>s.classList.remove('active'));
-document.getElementById(tab.dataset.tab).classList.add('active');
-});
-});
-
-// ===== LESSONS =====
-const lessons = { /* full detailed lessons for all subjects, 4 sections each */ 
-"Physics":[
-{section:"Kinematics", content:"Motion in 1D and 2D, speed, velocity, acceleration, examples."},
-{section:"Dynamics", content:"Newton's laws, forces, free body diagrams, friction."},
-{section:"Work & Energy", content:"Work=F*d, KE=1/2mv², PE=mgh, energy conservation."},
-{section:"Momentum", content:"Momentum p=mv, impulse, collisions, conservation."}],
-"Chemistry":[
-{section:"Atomic Structure", content:"Protons, neutrons, electrons, electron configuration."},
-{section:"Chemical Bonding", content:"Ionic, covalent, metallic bonds, polarity."},
-{section:"Stoichiometry", content:"Balancing equations, mole concept, calculations."},
-{section:"Acids & Bases", content:"pH, pOH, titration, strong/weak acids."}],
-"Biology":[
-{section:"Cell Biology", content:"Cell organelles, eukaryotic vs prokaryotic, cell theory."},
-{section:"Genetics", content:"Mendelian inheritance, Punnett squares."},
-{section:"Human Anatomy", content:"Circulatory, respiratory, nervous systems."},
-{section:"Ecology", content:"Ecosystem interactions, energy flow, biomes."}],
-"Mathematics":[
-{section:"Functions", content:"Definition, domain, range, types of functions."},
-{section:"Algebra", content:"Equations, inequalities, polynomials, factoring, quadratics."},
-{section:"Trigonometry", content:"Sine, cosine, tangent, identities."},
-{section:"Calculus", content:"Limits, differentiation, integration, applications."}],
-"Statistics":[
-{section:"Descriptive Statistics", content:"Mean, median, mode, range, SD."},
-{section:"Probability", content:"Basic probability, independent/dependent events."},
-{section:"Distributions", content:"Normal, binomial, Poisson distributions."},
-{section:"Inferential Statistics", content:"Sampling, hypothesis testing, confidence intervals."}],
-"Earth & Life Science":[
-{section:"Earth Structure", content:"Earth layers, plate tectonics, seismic waves."},
-{section:"Rocks & Minerals", content:"Igneous, sedimentary, metamorphic rocks, minerals."},
-{section:"Plate Tectonics", content:"Plate boundaries, earthquakes, volcanoes."},
-{section:"Environment & Sustainability", content:"Human impact, conservation, climate change."}]
-};
-
-const lessonContainer = document.getElementById('lesson-content');
-for(const sub in lessons){
-const div=document.createElement('div'); div.className="lesson"; div.innerHTML=`<h3>${sub} Lessons</h3>`;
-lessons[sub].forEach(l=>{div.innerHTML+=`<h4>${l.section}</h4><p>${l.content}</p>`});
-lessonContainer.appendChild(div);
-}
-
-// ===== ACTIVITIES =====
-const activities = { /* 2 activities per subject */ 
-"Physics":["Draw motion diagrams.","Solve F=ma problems."],
-"Chemistry":["Balance equations.","Draw Lewis structures."],
-"Biology":["Label cell organelles.","Punnett square exercise."],
-"Mathematics":["Graph functions.","Solve quadratic equations."],
-"Statistics":["Compute mean, median, mode.","Probability exercises."],
-"Earth & Life Science":["Classify rocks.","Explain earthquakes."]
-};
-const activityContainer = document.getElementById('activity-content');
-for(const sub in activities){
-const div=document.createElement('div'); div.className="lesson"; div.innerHTML=`<h3>${sub} Activities</h3>`;
-activities[sub].forEach((a,i)=>{div.innerHTML+=`<p>${i+1}. ${a}</p>`});
-activityContainer.appendChild(div);
-}
-
-// ===== QUIZZES & TESTS (4 quizzes, 2 tests per subject) =====
-const quizzes={}, tests={}, subjects=Object.keys(lessons);
-subjects.forEach(sub=>{
-quizzes[sub]=[]; tests[sub]=[];
-for(let q=1;q<=4;q++){ // 4 quizzes
-let questions=[]; for(let i=1;i<=10;i++){ questions.push({q:`${sub} Quiz ${q} Q${i}?`,options:["A","B","C","D"],a:Math.floor(Math.random()*4),exp:`Explanation Q${i}`}); }
-quizzes[sub].push({title:`${sub} Quiz ${q}`,questions});
-}
-for(let t=1;t<=2;t++){ // 2 tests
-let questions=[]; for(let i=1;i<=50;i++){ questions.push({q:`${sub} Test ${t} Q${i}?`,options:["A","B","C","D"],a:Math.floor(Math.random()*4),exp:`Explanation Q${i}`}); }
-tests[sub].push({title:`${sub} Test ${t}`,questions});
-}
-});
-
-// ===== LOAD QUIZZES =====
-const quizContainer = document.getElementById('quiz-content');
-for(const sub in quizzes){
-quizzes[sub].forEach((qz,qi)=>{
-const div=document.createElement('div'); div.className="test";
-div.innerHTML=`<h3>${sub} - ${qz.title}</h3>`;
-qz.questions.forEach((q,j)=>{
-div.innerHTML+=`<p><b>${q.q}</b></p>${q.options.map((o,idx)=>`<label><input type="radio" name="${sub}-qz${qi}-q${j}" value="${idx}">${o}</label><br>`).join('')}<button onclick="checkQuiz('${sub}',${qi},${j})">Submit</button><p class="score" id="${sub}-qz${qi}-score${j}"></p>`;
-});
-quizContainer.appendChild(div);
-});
-}
-
-// ===== LOAD TESTS =====
-const testContainer = document.getElementById('test-content');
-for(const sub in tests){
-tests[sub].forEach((t,ti)=>{
-const div=document.createElement('div'); div.className="test";
-div.innerHTML=`<h3>${sub} - ${t.title}</h3>`;
-t.questions.forEach((q,j)=>{
-div.innerHTML+=`<p><b>${q.q}</b></p>${q.options.map((o,idx)=>`<label><input type="radio" name="${sub}-t${ti}-q${j}" value="${idx}">${o}</label><br>`).join('')}<button onclick="checkTest('${sub}',${ti},${j})">Submit</button><p class="score" id="${sub}-t${ti}-score${j}"></p>`;
-});
-testContainer.appendChild(div);
-});
-}
-
-// ===== PROGRESS TRACKING =====
-const progressData = JSON.parse(localStorage.getItem('progress'))||{};
-function updateProgress(sub,id,qIndex,correct){
-if(!progressData[sub]) progressData[sub]={};
-if(!progressData[sub][id]) progressData[sub][id]=0;
-if(correct) progressData[sub][id]+=1;
-localStorage.setItem('progress',JSON.stringify(progressData)); displayProgress();
-}
-function displayProgress(){
-const container=document.getElementById('progress-content'); container.innerHTML="";
-for(const sub in progressData){ container.innerHTML+=`<h4>${sub}</h4>`;
-for(const t in progressData[sub]){ container.innerHTML+=`<p>${t}: Correct Answers: ${progressData[sub][t]}</p>`;}
-}
-}
-displayProgress();
-function checkQuiz(sub,qzIndex,qIndex){const q=quizzes[sub][qzIndex].questions[qIndex];
-const opts=document.getElementsByName(`${sub}-qz${qzIndex}-q${qIndex}`); let selected=-1;
-opts.forEach(o=>{if(o.checked) selected=parseInt(o.value);});
-const scoreEl=document.getElementById(`${sub}-qz${qzIndex}-score${qIndex}`);
-if(selected===-1){scoreEl.innerHTML="Please select an answer."; return;}
-if(selected===q.a){scoreEl.innerHTML=`Correct! ✅ ${q.exp}`;} else{scoreEl.innerHTML=`Wrong ❌ ${q.exp}`;}
-updateProgress(sub,`quiz${qzIndex}`,qIndex,selected===q.a);
-}
-function checkTest(sub,testIndex,qIndex){const q=tests[sub][testIndex].questions[qIndex];
-const opts=document.getElementsByName(`${sub}-t${testIndex}-q${qIndex}`); let selected=-1;
-opts.forEach(o=>{if(o.checked) selected=parseInt(o.value);});
-const scoreEl=document.getElementById(`${sub}-t${testIndex}-score${qIndex}`);
-if(selected===-1){scoreEl.innerHTML="Please select an answer."; return;}
-if(selected===q.a){scoreEl.innerHTML=`Correct! ✅ ${q.exp}`;} else{scoreEl.innerHTML=`Wrong ❌ ${q.exp}`;}
-updateProgress(sub,`test${testIndex}`,qIndex,selected===q.a);
-}
-
-// ===== SUMMARIES =====
-const summaries = { /* concise, accurate, YouTube links */ 
-"Physics":[{section:"Kinematics","summary":"Study of motion. <a href='https://www.youtube.com/watch?v=ZVj0pqDXqVU'>Video</a>"},
-{section:"Dynamics","summary":"Forces and Newton's laws. <a href='https://www.youtube.com/watch?v=2rRlHf7tIqU'>Video</a>"}],
-"Chemistry":[{section:"Atomic Structure","summary":"Atoms and electrons. <a href='https://www.youtube.com/watch?v=Hx33Eca0h0I'>Video</a>"}],
-"Biology":[{section:"Cell Biology","summary":"Cell organelles. <a href='https://www.youtube.com/watch?v=URUJD5NEXC8'>Video</a>"}],
-"Mathematics":[{section:"Functions","summary":"Functions and graphs. <a href='https://www.youtube.com/watch?v=Vfo5le26IhY'>Video</a>"}],
-"Statistics":[{section:"Descriptive Statistics","summary":"Mean, median, mode."}],
-"Earth & Life Science":[{section:"Earth Structure","summary":"Earth layers. <a href='https://www.youtube.com/watch?v=ZoeZgtJ0efo'>Video</a>"}]
-};
-const summaryContainer = document.getElementById('summary-content');
-for(const sub in summaries){
-const div=document.createElement('div'); div.className="summary"; div.innerHTML=`<h3>${sub} Summaries</h3>`;
-summaries[sub].forEach(s=>{div.innerHTML+=`<h4>${s.section}</h4><p>${s.summary}</p>`;}); summaryContainer.appendChild(div);
-}
-</script>
-</body>
-</html>
+<section id="lessons" class="active">
+  <h2>Lessons</h2>
+  <p>Select a subject to view its lessons:</p>
+  <ul>
+    <li><a href="lessons/physics.html" target="lesson-frame">Physics</a></li>
+    <li><a href="lessons/chemistry.html" target="lesson-frame">Chemistry</a></li>
+    <li><a href="lessons/biology.html" target="lesson-frame">Biology</a></li>
+    <li><a href="lessons/mathematics.html" target="lesson-frame">Mathematics</a></li>
+    <li><a href="lessons/statistics.html" target="lesson-frame">Statistics</a></li>
+    <li><a href="lessons/earth_life_science.html" target="lesson-frame">Earth & Life Science</a></li>
+  </ul>
+  
+  <iframe name="lesson-frame" style="width:100%; height:600px; border:1px solid #ccc;"></iframe>
+</section>
