--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
             <h2>Total Study Time: <span id="total-time">0</span> minutes</h2>
         </div>
 
-        <div id="lessons" class="tab">
-            <h1>Lessons</h1>
-            <p>Choose a subject to start learning:</p>
-            <div class="subject-grid">
-                <a href="lessons/precalc.html" class="subject-card">Pre-Calculus</a>
-                <a href="lessons/genbio1.html" class="subject-card">General Biology 1</a>
-                <a href="lessons/genchem1.html" class="subject-card">General Chemistry 1</a>
-                <a href="lessons/genphys1.html" class="subject-card">General Physics 1</a>
-                <a href="lessons/earthscience.html" class="subject-card">Earth Science</a>
-            </div>
+       <div id="lessons" class="tab">
+    <h1>Lessons</h1>
+    <p>Choose a subject to start learning. All lessons are detailed, textbook-style with explanations, examples, formulas, diagrams, and helpful videos.</p>
+    <div class="subject-grid">
+        <a href="subjects/precalc/index.html" class="subject-card">Pre-Calculus</a>
+        <a href="subjects/genbio1/index.html" class="subject-card">General Biology 1</a>
+        <a href="subjects/genchem1/index.html" class="subject-card">General Chemistry 1</a>
+        <a href="subjects/genphys1/index.html" class="subject-card">General Physics 1</a>
+        <a href="subjects/earthscience/index.html" class="subject-card">Earth Science</a>
+    </div>
         </div>
 
         <div id="activities" class="tab">
